<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/group"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_template" />

        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/manual_activity" />
    </group>

    <group android:id="@+id/group2">

        <item
            android:id="@+id/person"
            android:icon="@drawable/ic_person"
            android:title="@string/info_result" />

        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/map" />
    </group>

    <group android:id="@+id/group3">

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>

